# Elfactory

./: .env.example  .gitignore  README.md  pyproject.toml
logs/: .gitignore
scripts/: monitor_emails.py  setup_gmail.py  test_workflow.py
src/elfactory/: __init__.py  config.py
src/elfactory/agents/: __init__.py  santa.py
src/elfactory/agents/artisans/: __init__.py  airbrush_elf.py  battery_elf.py  blacksmith_elf.py  ceramics_elf.py  decal_elf.py  electronics_elf.py  engraver_elf.py  fabric_elf.py  glass_elf.py  leather_elf.py  librarian_elf.py  light_designer_elf.py  mechanic_elf.py  painter_elf.py  polish_elf.py  printer_3d_elf.py  software_elf.py  sound_engineer_elf.py  welding_elf.py  woodworker_elf.py
src/elfactory/agents/managers/: __init__.py  design_manager.py  logistics_manager.py  production_manager.py  quality_manager.py  reception_manager.py
src/elfactory/agents/support/: __init__.py  image_prompt_generator.py  online_shopper_elf.py  response_composer.py
src/elfactory/core/: __init__.py  orchestrator.py  state.py
src/elfactory/models/: __init__.py  design_output.py  logistics_output.py  production_output.py  quality_output.py  reception_output.py  santa_output.py  support_outputs.py
src/elfactory/services/: gmail_service.py
src/elfactory/tools/: __init__.py  email_tools.py  image_tools.py  report_tools.py  state_tools.py
src/elfactory/utils/: __init__.py  agent_logger.py  logging_setup.py
